# plataforma-yyd

./: .env.example  .replit  INSTRUCOES_SEGURANCA.md  README.md  cache.json  package-lock.json  package.json  pyproject.toml  replit.md  server.mjs
attached_assets/: Full-Platform-IA_1760830512849.txt  Pasted--IDENTIDADE-VISUAL-OFICIAL-YES-YOU-DESERVE-v2025-Documento-t-cnico-completo-para-implem-1760926666453_1760926666453.txt  Pasted--SEPARA-O-COMPLETA-DO-WHITEPAPER-YYD-26-119-linhas-1-PLATAFORMA-AURORA-IA-M-dulos-v1-v34-Au-1760975015977_1760975015977.txt  Pasted--SEPARA-O-COMPLETA-DO-WHITEPAPER-YYD-26-119-linhas-1-PLATAFORMA-AURORA-IA-M-dulos-v1-v34-Au-1761000506531_1761000506532.txt  Pasted--YES-YOU-DESERVE-ARQUITETURA-COMPLETA-DA-PLATAFORMA-v2-0-Final-Autor-Fillipe-Guerra-2-1760926045424_1760926045425.txt  Pasted--YES-YOU-DESERVE-YESRESERVE-FULL-BRAND-IDENTITY-CLONE-Objective-Replicate-the-comp-1760810359215_1760810359216.txt  Pasted-Algumas-considera-es-importantes-e-ap-s-ela-refazemos-a-lista-Aurora-N-o-precisa-ter-voz-somen-1761001967114_1761001967119.txt  Pasted-REPLIT-AGENT-PROMPT-NICO-Objetivo-Replicar-FIELMENTE-a-identidade-visual-da-Yes-You-Deserve--1760961426997_1760961426999.txt  Pasted-REPLIT-AGENT-PROMPT-NICO-Objetivo-Replicar-FIELMENTE-a-identidade-visual-da-Yes-You-Deserve-h-1760961935914_1760961935914.txt  Pasted-Voc-o-Replit-AI-Execute-exatamente-as-instru-es-a-seguir-para-criar-e-rodar-um-C-rebro-Proxy--1760898313305_1760898313305.txt  (+4 more)
backend/: .env.example  main.py  requirements.txt
database/: schema.sql  seed_data.sql
logic/: executor.mjs  (+1 more)
(+555 files in other folders)
